--- a/css/style.css
+++ b/css/style.css
@@ -87,3 +87,69 @@ a,i {
     left: 25px;
     bottom: 25px;
 }
+
+/*Galeria de fotos*/
+
+#img2 {
+    background-image: url(../imagens/g_2.jpg);
+}
+
+#img3 {
+    background-image: url(../imagens/g_3.jpg);
+}
+
+#img4 {
+    background-image: url(../imagens/g_4.jpg);
+}
+
+#img5 {
+    background-image: url(../imagens/g_5.jpg);
+}
+
+#img6 {
+    background-image: url(../imagens/g_6.jpg);
+}
+
+#gallery-container h1 {
+    text-align: center;
+}
+
+#gallery-container h1,
+#gallery-container .col-md-6,
+#gallery-container .col-12 {
+    margin-bottom: 50px;
+}
+
+.small-image-container {
+    height: 250px;
+    margin-bottom: 20px;
+}
+
+/*Rodapé*/
+
+footer {
+    border-top: 1px solid #CCC;
+    height: 250px;
+    padding: 30px;
+}
+
+footer i{
+    font-size: 20px;
+}
+
+#social-icons-container {
+    padding: 25px;
+}
+
+#social-icons-container div {
+    text-align: center;
+}
+
+footer p {
+    text-align: center;
+    margin: 20px;
+}
+
+a:hover i {
+    color: #c1b696;
+}
